--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
     <h1>Deepak Raj Purushothaman</h1>
     <h4>Senior UX, Mobile App, Website Software Engineer</h4>
 
-    <p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de" target="_blank">harrisonkong@skyroute66.com</a></p>
+    <p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de" target="_blank">deepak.purushothaman@rwth-aachen.de</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
@@ -30,31 +30,31 @@
 
     <h2>Education</h2>
 
-    <h3>University of Massachusetts, Boston</h3>
-    <h4>B.S. Computer Science, GPA 3.88</h4>
+    <h3>RWTH Aachen university, Aachen</h3>
+    <h4>M.Sc. Automotive Engineering </h4>
 
-    <h2>Professional Experiences</h2>
+    <!-- <h2>Professional Experiences</h2> ! -->
 
-    <h3>Subject Matter Expert / Online Instructor</h3>
-    <h4>Coursera, Mountain View, CA</h4>
-    <h5>June 2020 - Present</h5>
-      <ul>
-        <li>Create interactive online IT courses</li>
-        <li>Teach students worldwide</li>
-      </ul>
+    <!-- <h3>Subject Matter Expert / Online Instructor</h3> ! -->
+    <!-- <h4>Coursera, Mountain View, CA</h4> !-->
+    <!-- <h5>June 2020 - Present</h5> !-->
+      <!-- <ul> !-->
+        <!-- <li>Create interactive online IT courses</li> !-->
+        <!-- <li>Teach students worldwide</li> !-->
+      <!-- </ul> !-->
 
-    <h3>Founder, Software Engineer</h3>
-    <h4>skyRoute66, Los Angeles, CA</h4>
-    <h5>January 2019 - Present</h5>
-      <ul>
-        <li>Author and publish mobile apps, reusable iOS UI modules</li>
-        <li>Independent computer service contractor</li>
-      </ul>
+    <!-- <h3>Founder, Software Engineer</h3> !-->
+    <!-- <h4>skyRoute66, Los Angeles, CA</h4> !-->
+    <!-- <h5>January 2019 - Present</h5> !-->
+      <!-- <ul> !-->
+        <!-- <li>Author and publish mobile apps, reusable iOS UI modules</li> !-->
+        <!-- <li>Independent computer service contractor</li> !-->
+      <!-- </ul> !-->
   </body>
 
   <footer>
   <hr>
-  <p><a href="index.html">Back to my portal</a><p>
+  <p><a href="index.html">Back to Main Page</a><p>
   </footer>
 
 </html>
