--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     <img src="images/headshot.jpg" alt="Deepak Raj Purushothman headshot" width="20%">
 
     <h1>Deepak Raj Purushothaman</h1>
-    <h4>Senior UX, Mobile App, Website Software Engineer</h4>
+    <h4>Product Analyst</h4>
 
     <p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de" target="_blank">deepak.purushothaman@rwth-aachen.de</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
