--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <meta name="name" content="Deepak Raj Purushothaman website">
 <meta name="robots" content="noindex, nofollow">
   </header>
-  <img src = "images/banner.jpg" width="75%" alt="banner">
+  <img src = "images/Purushothaman_IG_Mai20.jpg" width="75%" alt="banner">
   <body>
-    <h1> Deepak Raj Purushothaman Portal </h1>
+    <h1> Deepak Raj Purushothaman </h1>
     <h2> About Me </h2>
     <p> I am an expert in Automotive Industry. My competence portfolio covers the spectrum from management to engineering </p>
     <p> I have a M.Sc degree in Automotive </p>
