--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="name" content="Deepak Raj Purushothaman website">
 <meta name="robots" content="noindex, nofollow">
   </header>
-  <img src = "images/deepakbanner.jpeg" alt="banner">
+  <img src = "images/deepakbanner.jpeg" height="25%" alt="banner">
   <body>
     <h1> Deepak Raj Purushothaman </h1>
     <h2> About Me </h2>
