--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
   <h2>Credentials and Portfolio</h2>
 
-  <p><a href="resume.html">My Resume </a> | <a href ="https://github.com/deepakrajpurushothaman">My GitHub</a></p>
+  <p> <a href ="https://www.linkedin.com/in/deepakrajpurushothaman/">My LinkedIn</a></p> | <a href ="https://github.com/deepakrajpurushothaman">My GitHub</a></p>
   <h2>Contact</h2>
 
 <p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de">deepak.purushothaman@rwth-aachen.de</a></p>
