--- a/index.html
+++ b/index.html
@@ -10,15 +10,50 @@
 <link rel="stylesheet" href"css/master.css">
 <link rel="shortcut" href="favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="name" content="Deepak Raj Purushothaman website">
+<!--<meta name="name" content="Deepak Raj Purushothaman website">!-->
+
+<!-- Header -->
+  <header id="home" class="intro-header">
+    <div class="container">
+      <div class="intro-message">
+        <div class="bio-pic">
+        <img class="img-top" src="img/bio5.jpeg" alt="">
+      </div>
+        <h1>Deepak Raj Purushothaman</h1>
+        <!-- <h3>Developer and Student</h3> -->
+        <hr class="intro-divider">
+        <ul class="list-inline intro-social-buttons">
+          <li class="list-inline-item">
+            <a href="Purushothaman_LinkedIn.pdf" class="btn btn-secondary btn-lg">
+                <i class="fa fa-file-o fa-fw"></i>
+                <span class="network-name">Resume</span>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/deepakrajpurushothaman" target="_blank" class="btn btn-secondary btn-lg">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/deepakrajpurushothaman/" class="btn btn-secondary btn-lg">
+                <i class="fa fa-linkedin fa-fw"></i>
+                <span class="network-name">LinkedIn</span>
+              </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </header>
-  <img src = "images/dp1.jpeg" width="25%" height="25%" alt="banner">
+
+</header>
+  <!--<img src = "images/dp1.jpeg" width="25%" height="25%" alt="banner">
   <body>
     <h1> Deepak Raj Purushothaman </h1>
     
   <h2>Credentials and Portfolio</h2>
 
-  <p> <a href ="https://www.linkedin.com/in/deepakrajpurushothaman/">My LinkedIn</a></p> | <a href ="https://github.com/deepakrajpurushothaman">My GitHub</a></p>
+  <p> <a href ="https://www.linkedin.com/in/deepakrajpurushothaman/">My LinkedIn</a></p> | <a href ="https://github.com/deepakrajpurushothaman">My GitHub</a></p>!-->
   <h2>Contact</h2>
 
 <p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de">deepak.purushothaman@rwth-aachen.de</a></p>
