--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <link rel="stylesheet" href="css/master.css">
 <link rel="stylesheet" href"css/master.css">
 <link rel="shortcut" href="favicon.ico" type="image/x-icon">
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
+
 <!--<meta name="name" content="Deepak Raj Purushothaman website">!-->
 
 <!-- Header -->
@@ -23,12 +27,6 @@
         <!-- <h3>Developer and Student</h3> -->
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
-          <li class="list-inline-item">
-            <a href="Purushothaman_LinkedIn.pdf" class="btn btn-secondary btn-lg">
-                <i class="fa fa-file-o fa-fw"></i>
-                <span class="network-name">Resume</span>
-              </a>
-          </li>
           <li class="list-inline-item">
             <a href="https://github.com/deepakrajpurushothaman" target="_blank" class="btn btn-secondary btn-lg">
                 <i class="fa fa-github fa-fw"></i>
