--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div class="container">
       <div class="intro-message">
         <div class="bio-pic">
-        <img class="img-top" src="img/bio5.jpeg" alt="">
+        <img class="img-top" src="img/bio5.jpeg" alt="Deepak">
       </div>
         <h1>Deepak Raj Purushothaman</h1>
-        <!-- <h3>Developer and Student</h3> -->
+        <h2> Digital Presence </h2>
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
           <li class="list-inline-item">
@@ -51,7 +51,6 @@
     
   <h2>Credentials and Portfolio</h2>
 
-  <p> <a href ="https://www.linkedin.com/in/deepakrajpurushothaman/">My LinkedIn</a></p> | <a href ="https://github.com/deepakrajpurushothaman">My GitHub</a></p>!-->
   <h2>Contact</h2>
 
 <p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de">deepak.purushothaman@rwth-aachen.de</a></p>
