--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 </header>
   <!--<img src = "images/dp1.jpeg" width="25%" height="25%" alt="banner">
   <body>
-    <h1> Deepak Raj Purushothaman </h1>
-    
-  <h2>Credentials and Portfolio</h2>
+    <h1> Deepak Raj Purushothaman </h1>!-->
+   
 
   <h2>Contact</h2>
 
