--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="bio-pic">
         <img class="img-top" src="img/bio5.jpeg" alt="Deepak">
       </div>
-        <h1>Deepak Raj Purushothaman</h1>
+    <img src = "images/dp1.jpeg" width="25%" height="25%" alt="banner">
+  <body>
+    <h1> Deepak Raj Purushothaman </h1>
         <h2> Digital Presence </h2>
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
