--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="intro-message">
         <div class="bio-pic">
-        <img class="img-top" src="img/bio5.jpeg" alt="Deepak">
+        <img class="img-top" src="img/bio5.jpeg" alt="">
       </div>
     <img src = "images/dp1.jpeg" width="25%" height="25%" alt="banner">
   <body>
@@ -36,11 +36,17 @@
               </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/deepakrajpurushothaman/" class="btn btn-secondary btn-lg">
+            <a href="https://www.instagram.com/thebrowniceman/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">LinkedIn</span>
+                <span class="network-name">Instagram</span>
               </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://www.facebook.com/TheBrownIceman" class="btn btn-secondary btn-lg">
+                <i class="fa fa-linkedin fa-fw"></i>
+                <span class="network-name">Facebook</span>
+              </a>
+          </li>  
         </ul>
       </div>
     </div>
