--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
           <li class="list-inline-item">
-            <a href="https://github.com/deepakrajpurushothaman" target="_blank" class="btn btn-secondary btn-lg">
+            <a href="https://deepakrajpurushothaman.github.io/thebrowniceman/" target="_blank" class="btn btn-secondary btn-lg">
                 <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Github</span>
+                <span class="network-name">Professional Competence Portfolio</span>
               </a>
           </li>
           <li class="list-inline-item">
