--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     <img src = "images/dp1.jpeg" width="25%" height="25%" alt="banner">
   <body>
-    <h1> Deepak Raj Purushothaman </h1>
+    <h1> TheBrownIceman's Digital Twins </h1>
         <h2> Digital Presence </h2>
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
