--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!doctype html>
+<!--<!doctype html>
 
-<!-- this is a comment for human! -->
-
-<html lang="en">
+<!--<html lang="en">
 
 </header>
 <title> TheBrownIceMan</title>
@@ -17,7 +15,7 @@
 <!--<meta name="name" content="Deepak Raj Purushothaman website">!-->
 
 <!-- Header -->
-  <header id="home" class="intro-header">
+  <!--<header id="home" class="intro-header">
     <div class="container">
       <div class="intro-message">
         <div class="bio-pic">
@@ -64,4 +62,33 @@
     <code>copyright (c) 2020 Deepak Raj Purushothaman </code>
   </footer>
 
-</html>
+</html> --!>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Deepak Raj Purushothaman</title>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
+
+
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    crossorigin="anonymous">
+
+  <!-- Custom fonts for this template -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+  <!-- Custom styles for this template -->
+  <link href="css/landing-page.css" rel="stylesheet">
+
+</head>
