--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <code>copyright (c) 2020 Deepak Raj Purushothaman </code>
   </footer>
 
-</html> --!>
+</html> !-->
 
 <!DOCTYPE html>
 <html lang="en">
