--- a/index.html
+++ b/index.html
@@ -92,3 +92,38 @@
   <link href="css/landing-page.css" rel="stylesheet">
 
 </head>
+  
+  <!-- Header -->
+  <header id="home" class="intro-header">
+    <div class="container">
+      <div class="intro-message">
+        <div class="bio-pic">
+        <img class="img-top" src="img/bio5.jpeg" alt="">
+      </div>
+        <h1>Deepak Raj Purushothaman</h1>
+        <!-- <h3>Developer and Student</h3> -->
+        <hr class="intro-divider">
+        <ul class="list-inline intro-social-buttons">
+          <li class="list-inline-item">
+            <a href="Purushothaman_LinkedIn.pdf" class="btn btn-secondary btn-lg">
+                <i class="fa fa-file-o fa-fw"></i>
+                <span class="network-name">Resume</span>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/deepakrajpurushothaman" target="_blank" class="btn btn-secondary btn-lg">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/deepakrajpurushothaman/" class="btn btn-secondary btn-lg">
+                <i class="fa fa-linkedin fa-fw"></i>
+                <span class="network-name">LinkedIn</span>
+              </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+
