--- a/index.html
+++ b/index.html
@@ -105,21 +105,15 @@
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
           <li class="list-inline-item">
-            <a href="Purushothaman_LinkedIn.pdf" class="btn btn-secondary btn-lg">
+            <a href="https://deepakrajpurushothaman.github.io/thebrowniceman/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-file-o fa-fw"></i>
-                <span class="network-name">Resume</span>
+                <span class="network-name">Proffesional Portfolio </span>
               </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/deepakrajpurushothaman" target="_blank" class="btn btn-secondary btn-lg">
+            <a href="https://www.instagram.com/thebrowniceman/" target="_blank" class="btn btn-secondary btn-lg">
                 <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Github</span>
-              </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/deepakrajpurushothaman/" class="btn btn-secondary btn-lg">
-                <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">LinkedIn</span>
+                <span class="network-name">Personal Portfolio</span>
               </a>
           </li>
         </ul>
