--- a/index.html
+++ b/index.html
@@ -120,4 +120,12 @@
       </div>
     </div>
   </header>
+  <body>   
+  <h2>Contact</h2>
+<p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de">deepak.purushothaman@rwth-aachen.de</a></p>
+  </body>
+  <footer>
+    <hr>
+    <code>copyright (c) 2020 Deepak Raj Purushothaman </code>
+  </footer>
 
