--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
           <li class="list-inline-item">
-            <a href="https://deepakrajpurushothaman.github.io/thebrowniceman/" class="btn btn-secondary btn-lg">
+            <a href="https://deepakrajpurushothaman.github.io/ProfessionalPortfolio/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-file-o fa-fw"></i>
                 <span class="network-name">Proffesional Portfolio </span>
               </a>
