--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="bio-pic">
         <img class="img-top" src="img/bio5.jpeg" alt="">
       </div>
-        <h2> You are now entering The Brown Iceman world </h2>
-        <h1>Deepak Raj Purushothaman</h1>
+        <h2 style="color:Gray;"> You are now entering The Brown Iceman world </h2>
+        <h1 style="color:Gray;">Deepak Raj Purushothaman</h1>
         <!-- <h3>Developer and Student</h3> -->
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
