--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
       <div class="intro-message">
         <div class="bio-pic">
-        <img class="img-top" src="img/bio5.jpeg" alt="">
+        <img class="img-top" src="img/IMG_1621.jpg" alt="">
       </div>
         <h2 style="color:#001a13;"> You are now entering The Brown Iceman world </h2>
         <h1 style="color:#001a13;">Deepak Raj Purushothaman</h1>
