--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="bio-pic">
         <img class="img-top" src="images/IMG_1621.jpg" alt="">
       </div>
-        <h2 style="color:#DA70D6;"> You are now entering The Brown Iceman world </h2>
-        <h1 style="color:#FF1493;">Deepak Raj Purushothaman</h1>
+        <h2 style="color:#F0FFFF;"> You are now entering The Brown Iceman world </h2>
+        <h1 style="color:#F0FFFF;">Deepak Raj Purushothaman</h1>
         <!-- <h3>Developer and Student</h3> -->
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
