--- a/index.html
+++ b/index.html
@@ -1,69 +1,3 @@
-<!--<!doctype html>
-
-<!--<html lang="en">
-
-</header>
-<title> TheBrownIceMan</title>
-<link rel="stylesheet" href="css/master.css">
-<link rel="stylesheet" href"css/master.css">
-<link rel="shortcut" href="favicon.ico" type="image/x-icon">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
-<meta name="author" content="">
-
-<!--<meta name="name" content="Deepak Raj Purushothaman website">!-->
-
-<!-- Header -->
-  <!--<header id="home" class="intro-header">
-    <div class="container">
-      <div class="intro-message">
-        <div class="bio-pic">
-        <img class="img-top" src="img/bio5.jpeg" alt="">
-      </div>
-    <img src = "images/dp1.jpeg" width="25%" height="25%" alt="banner">
-  <body>
-    <h1> TheBrownIceman's Digital Twins </h1>
-        <h2> Digital Presence </h2>
-        <hr class="intro-divider">
-        <ul class="list-inline intro-social-buttons">
-          <li class="list-inline-item">
-            <a href="https://deepakrajpurushothaman.github.io/thebrowniceman/" target="_blank" class="btn btn-secondary btn-lg">
-                <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Professional Competence Portfolio</span>
-              </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/thebrowniceman/" class="btn btn-secondary btn-lg">
-                <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">Instagram</span>
-              </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.facebook.com/TheBrownIceman" class="btn btn-secondary btn-lg">
-                <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">Facebook</span>
-              </a>
-          </li>  
-        </ul>
-      </div>
-    </div>
-  </header>
-
-</header>
-  <body>   
-
-  <h2>Contact</h2>
-
-<p>Email: <a href="mailto:deepak.purushothaman@rwth-aachen.de">deepak.purushothaman@rwth-aachen.de</a></p>
-  </body>
-  <footer>
-    <hr>
-    <code>copyright (c) 2020 Deepak Raj Purushothaman </code>
-  </footer>
-
-</html> !-->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -112,7 +46,7 @@
               </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.instagram.com/thebrowniceman/" target="_blank" class="btn btn-secondary btn-lg">
+            <a href="https://deepakrajpurushothaman.github.io/PersonalPortfolio/" target="_blank" class="btn btn-secondary btn-lg">
                 <i class="fa fa-github fa-fw"></i>
                 <span class="network-name">Personal Portfolio</span>
               </a>
