--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </li>
           <li class="list-inline-item">
             <a href="https://deepakrajpurushothaman.github.io/PersonalPortfolio/" target="_blank" class="btn btn-secondary btn-lg">
-                <i class="fa fa-github fa-fw"></i>
+                <i class="fa fa-camera-retro fa-lg"></i>
                 <span class="network-name">Personal Portfolio</span>
               </a>
           </li>
