--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <ul class="list-inline intro-social-buttons">
           <li class="list-inline-item">
             <a href="https://deepakrajpurushothaman.github.io/ProfessionalPortfolio/" class="btn btn-secondary btn-lg">
-                <i class="fa fa-file-o fa-fw"></i>
+                <i class="fa fa-id-badge" aria-hidden="true"></i>
                 <span class="network-name">Proffesional Portfolio </span>
               </a>
           </li>
           <li class="list-inline-item">
             <a href="https://deepakrajpurushothaman.github.io/PersonalPortfolio/" target="_blank" class="btn btn-secondary btn-lg">
-                <i class="fa fa-camera-retro fa-lg"></i>
+                <i class="fa fa-id-badge" aria-hidden="true"></i>
                 <span class="network-name">Personal Portfolio</span>
               </a>
           </li>
