--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
         <h3 style="color:#F0FFFF;"> You are now entering The Brown Iceman world </h3>
         <h1 style="color:#F0FFFF;">Deepak Raj Purushothaman</h1>
-        <!-- <h3>Developer and Student</h3> -->
+        <h3>Deepak (English) / ದೀಪಕ್ (Kannada) / தீபக் (Tamil) / दीपक (Hindi)</h3>
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
           <li class="list-inline-item">
