--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                 <span class="network-name">Personal Portfolio</span>
               </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://deepakrajpurushothaman.github.io/TheStartUpStory/" target="_blank" class="btn btn-secondary btn-lg">
+                <i class="fa fa-id-badge" aria-hidden="true"></i>
+                <span class="network-name">The StartUp Story</span>
+              </a>
+          </li>
         </ul>
       </div>
     </div>
