--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           <li class="list-inline-item">
             <a href="https://deepakrajpurushothaman.github.io/ProfessionalPortfolio/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-id-badge" aria-hidden="true"></i>
-                <span class="network-name">Proffesional Portfolio </span>
+                <span class="network-name">Proffesional Story</span>
               </a>
           </li>
           <li class="list-inline-item">
             <a href="https://deepakrajpurushothaman.github.io/PersonalPortfolio/" target="_blank" class="btn btn-secondary btn-lg">
                 <i class="fa fa-id-badge" aria-hidden="true"></i>
-                <span class="network-name">Personal Portfolio</span>
+                <span class="network-name">Personal Story</span>
               </a>
           </li>
           <li class="list-inline-item">
