--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3 style="color:#F0FFFF;"> You are now entering The Brown Iceman world </h3>
         <h1 style="color:#F0FFFF;">Deepak Raj Purushothaman</h1>
         <h3>Deepak (English) / ದೀಪಕ್ (Kannada) / தீபக் (Tamil) / दीपक (Hindi)</h3>
-        <h5>0-22: &#x1f1ee, 22-Present: &#xe50e</h5>
+        <h6>0-22: &#127470 &#127475, 22-Present: &#127465 &#127466</h6>
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
           <li class="list-inline-item">
