--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
         <h3 style="color:#F0FFFF;"> You are now entering The Brown Iceman world </h3>
         <h1 style="color:#F0FFFF;">Deepak Raj Purushothaman</h1>
-        <h3>Deepak (English) / ದೀಪಕ್ (Kannada) / தீபக் (Tamil) / दीपक (Hindi)</h3>
+        <h4> Deepak (English) / ದೀಪಕ್ (Kannada) / தீபக் (Tamil) / Deepak (German) / दीपक (Hindi) </h4>
         <h6>0-22: 🇮🇳 , 22-Present: 🇩🇪 </h6>
         <hr class="intro-divider">
         <ul class="list-inline intro-social-buttons">
