--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="bio-pic">
         <img class="img-top" src="images/IMG_1621.jpg" alt="">
       </div>
-        <h3 style="color:#F0FFFF;"> You are now entering The Brown Iceman world </h3>
+        <!--h3 style="color:#F0FFFF;"> You are now entering The Brown Iceman world </h3-->
         <h1 style="color:#F0FFFF;">Deepak Raj Purushothaman</h1>
         <h4> Deepak (English) / ದೀಪಕ್ (Kannada) / தீபக் (Tamil) / Deepak (German) / दीपक (Hindi) </h4>
         <h6>0-22: 🇮🇳 , 22-Present: 🇩🇪 </h6>
