--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://deepakrajpurushothaman.github.io/PersonalPortfolio/" target="_blank" class="btn btn-secondary btn-lg">
+            <a href="https://deepakrajpurushothaman.github.io/PersonalPortfolio/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-id-badge" aria-hidden="true"></i>
                 <span class="network-name">Personal Story</span>
               </a>
