--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://deepakrajpurushothaman.github.io/TheStartUpStory/" class="btn btn-secondary btn-lg">
+            <a href="https://mobility-markets.com/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-id-badge" aria-hidden="true"></i>
                 <span class="network-name">The StartUp Story</span>
               </a>
